# TLDNS-Relay

./: CMakeLists.txt  Doxyfile  README.md  dnsrelay.txt
doc/APIdoc/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  cache_8c.html  cache_8c.js  cache_8c__incl.map  cache_8c_a3aa8d6fa65bbd42c0b6327c67362234d_icgraph.map  cache_8c_a558b15d81ce86a0a4afa5a64e6fd8055_icgraph.map  cache_8c_a6ced4e1f620d2e750fb0c2c049962fa8_cgraph.map  cache_8c_a6ced4e1f620d2e750fb0c2c049962fa8_icgraph.map  cache_8c_a85397655f041915af32d1846796578a4_cgraph.map  cache_8c_a85397655f041915af32d1846796578a4_icgraph.map  cache_8c_a8c6dd0d6aa6f172b089056e27c11e7da_icgraph.map  cache_8h.html  cache_8h.js  cache_8h__dep__incl.map  cache_8h__incl.map  cache_8h_a558b15d81ce86a0a4afa5a64e6fd8055_cgraph.map  cache_8h_source.html  classes.html  config_8c.html  config_8c.js  config_8c__incl.map  config_8c_ac93dfd9f4c9f842917b45c609c8c2da9_icgraph.map  config_8h.html  config_8h.js  config_8h__dep__incl.map  config_8h_source.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dns_8h.html  dns_8h.js  dns_8h__dep__incl.map  dns_8h__incl.map  dns_8h_source.html  dns__client_8c.html  (+229 more)
doc/latex/: annotated.tex  cache_8c.tex  cache_8h.tex  cache_8h_source.tex  config_8c.tex  config_8h.tex  config_8h_source.tex  dns_8h.tex  (+47 more)
include/: cache.h  config.h  dns.h  dns_client.h  dns_conversion.h  dns_parse.h  dns_print.h  dns_server.h  dns_structure.h  index_pool.h  linklist_rbtree.h  log.h  query_pool.h  queue.h  rbtree.h  util.h
src/: cache.c  config.c  config_jar.c  dns_client.c  dns_conversion.c  dns_parse.c  dns_print.c  dns_server.c  index_pool.c  linklist_rbtree.c  main.c  query_pool.c  queue.c  rbtree.c
(+82 files in other folders)
